Set checksum transient for one day String changes
git-svn-id: https://plugins.svn.wordpress.org/checksum-verifier/trunk@1086960 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lang/checksum_verifier-de_DE.po
+++ b/lang/checksum_verifier-de_DE.po
@@ -24,6 +24,6 @@ msgstr "Nächste Prüfung in"
 msgid "Checksum Verifier Alert"
 msgstr "Checksum Verifier Alarm"
 
-msgid "Checksums do not match for the following files"
-msgstr "Bei folgenden Dateien stimmen die Prüfsummen nicht überein"
+msgid "Official checksums do not match for the following files"
+msgstr "Folgende Dateien weichen laut Prüfsumme von den offiziellen Dateien ab"
 
